<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Translate-Net</string>
    <string name="site_name">"www.translate-net.com"</string>
    <string name="app_notify">"Awaiting requests..."</string>
    <string name="default_value">"-"</string>
    <string name="translator_not_supported">"Translator's app is not supported in iOS version."</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="note">"Note"</string>
    <string name="act_settings_user">"User and billing settings"</string>
    <string name="act_settings_lang">"Native language settings"</string>
    <string name="act_settings_translate">"Translation and prices settings"</string>
    <string name="act_settings_phone">"Phone number settings"</string>
    <string name="error_processing_active">"Unable to change settings while calls are being active or awaiting."</string>
    <string name="done">Done</string>
    <string name="error_network">Network error</string>
    <string name="network_connected">"Established connection."</string>
    <string name="network_error_connect">"Unable to establish connection."</string>
    <string name="network_error_connection">"Lost connection to the server."</string>
    <string name="network_error_format">"Error communicating with server."</string>
    <string name="connecting">"Connecting..."</string>
    <string name="error">Error</string>
    <string name="lang_caption">Language</string>
    <string name="lang">"Language:"</string>
    <string name="loading">"Loading..."</string>
    <string name="translators">"Translators:"</string>
    <string name="clients_hour">"Clients/Hour:"</string>
    <string name="select">Select</string>
    <string name="search">Search</string>
    <string name="min">min</string>
    <string name="phonecall_to_translator">"Phonecall to translator"</string>
    <string name="phonecall_from_client">"Phonecall from client"</string>
    <string name="phonecall_unknown">"Unknown incoming phonecall"</string>
    <string name="native_lang">"Native:"</string>
    <string name="list_lang">"Translate:"</string>
    <string name="same_lang">"Language of translation must be different from the native language."</string>
    <string name="list_lang_list">"Translating languages:"</string>
    <string name="await_calls">"Awaiting calls..."</string>
    <string name="name">"Name:"</string>
    <string name="status">"Status:"</string>
    <string name="price">"Price:"</string>
    <string name="length">"Length:"</string>
    <string name="rating">"Rating:"</string>
    <string name="balance">"Balance:"</string>
    <string name="translate">"Translate:"</string>
    <string name="client">"Client:"</string>
    <string name="country">"Country:"</string>
    <string name="max_time">"Minutes(max):"</string>
    <string name="confirm">Confirm</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="idle">Idle</string>
    <string name="active">Active</string>
    <string name="cost">"Cost"</string>
    <string name="call_verb">Call</string>
    <string name="call_noun">Call</string>
    <string name="pcall_req_verb">"Request"</string>
    <!-- "Phonecall" might be shortened to fit in 14 characters-->
    <string name="pcall_verb">Phonecall</string>
    <string name="pcall_noun">Phonecall</string>
    <string name="client_balance">"Client balance:"</string>
    <string name="request">"Call request"</string>
    <string name="translator">"Translator"</string>
    <string name="confirmed_request">"confirmed call request. You can now call to the translator."</string>
    <string name="rejected_request">"rejected call request."</string>
    <string name="call_timeout">"Call timeout."</string>
    <string name="translators_confirmed">"Translators confirmed call request:"</string>
    <string name="phonecall_request">"Phonecall request awaiting."</string>
    <string name="rating_descr">"Rate translator "</string>
    <string name="time">"Time:"</string>
    <string name="cancel_alert">"Cancel alert"</string>
    <string name="await">Await</string>
    <string name="busy">Busy</string>
    <string name="confirmed_adjective">Confirmed</string>
    <string name="rejected_adjective">Rejected</string>
    <string name="available">Available</string>
    <string name="client_low_balance">"Client balance is low."</string>
    <string name="low_balance">"Low balance."</string>
    <string name="purchase_credits">"Buy credits"</string>
    <string name="deposit_money">"Deposit money on account"</string>
    <string name="credit">"cr"</string>
    <string name="cent">"c"</string>
    <string name="not_enough_data">"not enough data"</string>
    <string name="error_lang">"Unsupported language. Changed native language to:"</string>
    <string name="error_translate">"Removed unsupported languages from translation settings."</string>
    <string name="act_history">"Call history"</string>
    <string name="act_history_ratings">"Call history and ratings"</string>
    <string name="last_rating">"Last rating:"</string>
    <string name="rate">"Rate"</string>
    <string name="call_start_noun">"Start:"</string>
    <string name="disconnect">"Disconnect"</string>
    <string name="act_statistics">Statistics</string>
    <string name="calls">Calls</string>
    <string name="clients">Clients</string>
    <string name="hour">Hour</string>
    <string name="day">Day</string>
    <string name="rating_top">"Top by rating: higest"</string>
    <string name="money_sum">"Withdrawn:"</string>
    <string name="call_num">"Call number:"</string>
    <string name="call_time_sum">"Call time:"</string>
    <string name="online_translators">"Translators online:"</string>
    <string name="no_translators">"No translators currently online."</string>
    <string name="active_tsearch">"We are actively searching for translators."</string>
</resources>
